sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:8: error: value to is not a member of Integer
    for(i <- Start to Stop) {
                   ^AlgCocktailSort2:15: error: value to is not a member of Integer
    for(i <- Stop to Start by -1) {
                  ^